# synthetic_neurofibroma

./: .gitattributes  .gitignore  AGENTS.md  Alex-Dils_Research-Plan_06222026.docx  README.md  TODO.md  pyproject.toml
code/data_generation/body_parts/scripts/: build_body_part_camera_depth_manifest.py  build_body_part_multi_lesion_depth_dataset.py  build_body_part_multi_volume_plotly_viewers.py  build_body_part_rgb_depth_montages.py  build_body_part_volume_depth_dataset.py  build_synthetic_body_part_montages.py  organize_body_part_multi_lesion_synthetic_dataset.py  refresh_body_part_plotly_vertexcolors.py  repair_synthetic_bodypart_assets.py  (+4 more)
code/depth_maps/scripts/: build_body_part_real_vs_gt_visualizations.py  build_depth_dataset_visualizations.py  export_body_part_pairs_to_depth_maps.py  generate_base_depth_maps.py  generate_body_part_depth_maps.py  generate_synthetic_volume_depth_maps.py  update_depth_visualizations.py
code/depth_pro/scripts/: run_depth_pro.py
code/depth_pro/visualizations/: README.md
code/synthetic_nf/: __init__.py  datasets.py  lesion_volume.py  lesion_volume_cli.py  paths.py
data/: README.md
examples/: run_sample_table.py
literature/: PACKAGE_README.md  README.md
literature/data/: annotated_literature_review.md  neurofibroma_literature.bib  neurofibroma_literature.csv  neurofibroma_literature.json  physical_modeling_notes.md  search_manifest.json
literature/scripts/: build_literature_assets.py
literature/visualizations/: literature_map.ipynb
sample_data/lesion_volume_sample/: lesions.json  sample_annotations.csv
(+27 files in other folders)
