[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "synthetic-nf"
version = "0.1.0"
description = "Synthetic neurofibroma data generation and depth-map experiments."
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["code"]
include = ["synthetic_nf*"]
